--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -25,7 +25,7 @@
     <string name="select_a_different_color">Valitse eri väri</string>
     <string name="download">Lataa</string>
     <string name="notification">Ilmoitus</string>
-    <string name="email">Email</string>
+    <string name="email">Sähköposti</string>
     <string name="previous">Edellinen</string>
     <string name="playpause">Toista / Tauota</string>
     <string name="next">Seuraava</string>
@@ -74,7 +74,7 @@
     <string name="rename_folder_error">Kansiota ei voitu uudelleennimetä</string>
     <string name="rename_folder_empty">Kansiolle täytyy antaa nimi</string>
     <string name="rename_folder_exists">Nimi on jo käytössä</string>
-    <string name="rename_folder_root">Root-kansiota ei voi uudelleennimetä</string>
+    <string name="rename_folder_root">Juurihakemistoa ei voi uudelleennimetä</string>
     <string name="rename_folder_ok">Kansio uudelleennimetty</string>
     <string name="renaming_folder">Uudelleennimetään kansio</string>
     <string name="filename_cannot_be_empty">Tiedostolle täytyy antaa nimi</string>
@@ -142,7 +142,7 @@
     <string name="select_folder">Valitse kansio</string>
     <string name="select_file">Valitse tiedosto</string>
     <string name="confirm_storage_access_title">Vahvista pääsy ulkoiseen tallennustilaan</string>
-    <string name="confirm_storage_access_text">Valitse muistikortin root-kansio seuraavaksi antaaksesi kirjoitusoikeuden</string>
+    <string name="confirm_storage_access_text">Valitse muistikortin juurihakemisto seuraavaksi antaaksesi kirjoitusoikeuden</string>
     <string name="confirm_storage_access_text_sd">Jos et näe muistikorttia, kokeile tätä</string>
     <string name="confirm_selection">Vahvista valinta</string>
 
@@ -172,8 +172,8 @@
     <string name="select_storage">Valitse tallennustila</string>
     <string name="internal">Sisäinen</string>
     <string name="sd_card">Muistikortti</string>
-    <string name="root">Root</string>
-    <string name="wrong_root_selected">Väärä kansio valittu, valitse muistikortin root-kansio</string>
+    <string name="root">Juurihakemisto</string>
+    <string name="wrong_root_selected">Väärä kansio valittu, valitse muistikortin juurihakemisto</string>
     <string name="sd_card_usb_same">Muistikortin ja USB-laitteen polut eivät voi olla samat</string>
     <string name="app_on_sd_card">Sovellus on asennettu muistikortille, jonka vuoksi widgetit eivät ole käytettävissä. Niitä ei näytetä widget-listalla.
         Kyseessä on järjestelmän rajoitus, joten jos haluat käyttää widgetejä, siirrä sovellus takaisin sisäiseen tallennustilaan.</string>
@@ -195,8 +195,8 @@
     <string name="camera">Kamera</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Kappaleen nimi</string>
-    <string name="gps_coordinates">GPS coordinates</string>
-    <string name="altitude">Altitude</string>
+    <string name="gps_coordinates">GPS-koordinaatit</string>
+    <string name="altitude">Korkeus</string>
 
     <!-- Color customization -->
     <string name="background_color">Taustaväri</string>
@@ -220,7 +220,7 @@
     <string name="app_icon_color_warning">VAROITUS: Jotkin käynnistinohjelmat eivät käsittele kuvakkeen mukauttamista oikein. Jos kuvake häviää, käynnistä sovellus Google Playn tai jonkin widgetin kautta, jos mahdollista.
         Käynnistyksen jälkeen palauta kuvakkeen oranssi oletusväri #F57C00. Pahimmillaan saatat joutua asentamaan sovelluksen uudelleen.</string>
     <string name="share_colors_success">Värit päivitetty. Uusi teema nimeltä \'Jaettu\' käytä sitä jatkossa muokataksesi värejä kaikissa sovelluksissa.</string>
-    <string name="shared_theme_note">Note that even though you are using the Pro app version, you still need Simple Thank You for technical reasons. It takes care of the color synchronization.</string>
+    <string name="shared_theme_note">Huomioi, että vaikka käytössäsi on sovelluksen Pro-versio, Simple Thank You tarvitaan teknisistä syistä mm. värien synkronointiin.</string>
     <string name="purchase_thank_you">
         <![CDATA[
             Osta <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> avataksesi ominaisuuden ja tukeaksesi kehitystä. Kiitos!
@@ -324,7 +324,7 @@
     <string name="yesterday">Eilen</string>
     <string name="today">Tänään</string>
     <string name="tomorrow">Huomenna</string>
-    <string name="hide_year">Hide year</string>
+    <string name="hide_year">Piilota vuosi</string>
     <string name="seconds_raw">sekunnit</string>
     <string name="minutes_raw">minuutit</string>
     <string name="hours_raw">tunnit</string>
@@ -699,7 +699,7 @@
     <string name="gallery_short">Galleria</string>
     <string name="music_player_short">Musiikkisoitin</string>
     <string name="notes_short">Muistiinpanot</string>
-    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="sms_messenger_short">Viestit</string>
     <string name="thank_you_short">Thank You</string>
     <string name="voice_recorder_short">Ääninauhuri</string>
 
